--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+annotated-types==0.6.0
+black==24.4.2
+click==8.1.7
 confluent-kafka==2.4.0
 delta-spark==3.2.0
 ecs-logging==2.1.0
 importlib_metadata==7.1.0
+mypy-extensions==1.0.0
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.2
 py4j==0.10.9.7
+pydantic==2.7.1
+pydantic-settings==2.2.1
+pydantic_core==2.18.2
 pyspark==3.5.1
+python-dotenv==1.0.1
+typing_extensions==4.11.0
 zipp==3.18.2
